// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NarrowModeDetector render renders ReactResizeDetector  1`] = `
<ResizeDetector
  handleHeight={false}
  handleWidth={true}
  nodeType="div"
  onResize={null}
  querySelector="body"
  refreshRate={1000}
  skipOnMount={false}
  targetDomEl={null}
  targetRef={null}
>
  [Function]
</ResizeDetector>
`;

exports[`NarrowModeDetector render renders child component properly when narrow mode is disabled: narrow mode should be false 1`] = `
<DetailsViewContent
  isNarrowMode={false}
/>
`;

exports[`NarrowModeDetector render renders child component properly when narrow mode is enabled: narrow mode should be false 1`] = `
<DetailsViewContent
  isNarrowMode={false}
/>
`;

exports[`NarrowModeDetector render renders child component properly when narrow mode is enabled: narrow mode should be true 1`] = `
<DetailsViewContent
  isNarrowMode={true}
/>
`;
